syntax = "proto3";
package com.jade.proto;

option java_package = "com.jade.proto";
option java_outer_classname = "TeacherProto";
option java_multiple_files = true;

service StudentService {
    rpc GetRealNameByUsername (MyRequest) returns (MyResponse) {}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 2;
}
